# evil

./: Cargo.toml  Readme.md  index.html
.github/workflows/: release.yml
assets/: sw.js
examples/: Wm2j.hepmc.zst
src/: app.rs  clustering.rs  config.rs  dir_entries.rs  event.rs  event_loader.rs  file_dialog.rs  font.rs  image.rs  import.rs  jets.rs  lib.rs  main.rs  opt.rs  particle.rs  plot.rs  plotter.rs  windows.rs
src/export/: asy.rs  header.asy  mod.rs  y_phi.asy
