[package]
name = "evil"
description = "Visualise simulated collider events"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-or-later"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/evil"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1.0"
bzip2 = "0.4"
eframe = { version = "0.15", features = ["persistence"] }
env_logger = "0.9"
flate2 = "1.0"
hepmc2 = "0.5"
lazy_static = "1.4"
lhef = "0.4"
log = "0.4"
lz4 = "1.23"
plotters = "0.3"
plotters-backend = "0.3"
structopt = "0.3"
zstd = "0.9"
usvg = "0.19"
tiny-skia = "0.6"
egui = { version = "0.15", features = ["persistence"] }
epi = { version = "0.15", features = ["persistence"] }
resvg = "0.19"
jetty = "0.2"
num-traits = "0.2"
font-loader = "0.11"
strum = "0.23"
strum_macros = "0.23"
