[package]
name = "evil"
description = "Visualise simulated collider events"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/evil"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
egui-plotter = { git = "https://github.com/Gip-Gip/egui-plotter/" }
plotters = "0.3.5"
anyhow = "1.0.75"
jetty = "0.3.2"
lazy_static = "1.4.0"
num-traits = "0.2.16"
strum = { version = "0.25.0", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
