[package]
name = "evil"
description = "Visualise simulated collider events"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/evil"

[dependencies]
egui = { version = "0.25", features = ["serde"] }
eframe = { version = "0.25", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui_plot = "0.25"
log = "0.4"
serde = { version = "1", features = ["derive"] }
plotters = "0.3"
anyhow = "1.0"
jetty = "0.4.1"
lazy_static = "1.4"
num-traits = "0.2"
strum = { version = "0.25", features = ["derive"] }
event-file-reader = { version = "0.3", features = ["bzip2", "lz4_flex"] }
particle_id = {version = "0.5", features = ["serde"] }
avery = "0.6"
egui_file = "0.14"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
